--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ScrollView
+    <!--<ScrollView
         android:id="@+id/main_scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -20,11 +20,20 @@
             android:text="Hello World!"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp" />
-    </ScrollView>
+
+    </ScrollView>-->
+
+    <ListView
+
+        android:id="@+id/lv_chat_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:orientation="horizontal">
 
         <EditText
@@ -36,7 +45,7 @@
 
         <Button
             android:id="@+id/btn_send"
-            android:layout_width="160dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:text="send" />
 
