--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
     </ScrollView>-->
 
     <ListView
-
+        android:divider="@null"
         android:id="@+id/lv_chat_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
